1.win下的启动脚本。